fix layout issues in products grid

--- a/assets/image_effect.css
+++ b/assets/image_effect.css
@@ -33,6 +33,7 @@
 }
 
 .product-grid-item {
+  margin-top: 10px;
   opacity: 1;
   -webkit-transform: scale(1.0);
   -webkit-transform-origin: 50% 50%;
